Fri  Sep 3  2004	H. Wade Minter (minter@lunenburg.org)
     * Give up on having the 2.0 updater in Perl/Tk and get it working
       via the console.
     * Begin documentation update for 2.0.

Wed  May 26 2004	H. Wade Minter (minter@lunenburg.org)
     * Switch from DBD::MySQL to DBD::SQLite
     * Move database schema into the __DATA__ block of mrvoice.pl

Tue  May 25 2004	H. Wade Minter (minter@lunenburg.org)
     * Display invalid songs (where there is an entry in the database, but
       no corresponding file on disk) in the search results, but tag them
       in red.

Mon  Apr 26 2004	H. Wade Minter (minter@lunenburg.org)
     * Switched direct accesses of @_ to use shift() instead.  Seems more
       perlish and easier to read.

Sun  Apr 25 2004	H. Wade Minter (minter@lunenburg.org)
     * Tightened up some Fkey code - I had way too many repeated lines
       in there.

Fri  Apr 23 2004	H. Wade Minter (minter@lunenburg.org)
     * Mr. Voice now compiles under "use strict" - I rock.

Thu  Apr 22 2004	H. Wade Minter (minter@lunenburg.org)
     * Bumped version number to 1.10.7
     * Got rid of a lot of repeated code in the hotkeys area.  More 
       spring cleaning.

Mon  Apr 19 2004	H. Wade Minter (minter@lunenburg.org)
     * Tagged Release 1.10.6 (real release incorporating WMA support
       and D&D Bugfixes)

Sun  Apr 18 2004	H. Wade Minter (minter@lunenburg.org)
     * Added WMA support under MSWin32 (suggested by kprobbins)
     * Removed obsolete $bulkaddtypes definition.

Sun  Apr 11 2004	H. Wade Minter (minter@lunenburg.org)
     * Changed the DropSite behavior to use a DropSite for each part of
       the hotkey area (Frame, Checkbutton, and Label) - needed in 
       804.026-final.
     * Bumped version number to 1.10.4 in preparation for bugfix release.

Thu  Mar 25 2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug where the Listbox got focus upon completion of
       a search.
     * Released Mr. Voice version 1.10.2
